# GlobalButton

./: README.md  db.py  main.py  pyproject.toml
static/css/: style.css  style2.css  style3.css
templates/: about.html  contact.html  index.html  redirect.html
